--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <i class="fa-solid fa-chevron-down"></i>
                         <i class="fa-solid fa-video"></i>
                         <p>Stop Video</p>
-                    </div class="flex-col">
+                    </div>
                     
                     <div class="flex-col">
                         <i class="fa-solid fa-chevron-down"></i>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="end">
                     <div class="end-meet">
-                        <p>End Meeting</p>
+                        <span>End Meeting</span>
                     </div>
                 </div>
 
